syntax = "proto2";

package pbHello;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

message HelloReq {
    optional int32 uid  = 1[(gogoproto.nullable) = false]; // id
    optional string msg = 2[(gogoproto.nullable) = false]; // 信息
}

message RpcResp {
    optional int32   code  = 1[(gogoproto.nullable) = false]; // 响应码
    optional string  msg   = 2[(gogoproto.nullable) = false]; // 响应信息
    optional string  info  = 3[(gogoproto.nullable) = false]; // 信息
}
